scrollbar-width: thin corrected

--- a/src/sass/partials/_modal-buy.scss
+++ b/src/sass/partials/_modal-buy.scss
@@ -16,6 +16,7 @@
 
 .order {
   overflow: auto;
+  scrollbar-width: thin;
   position: relative;
   height: 580px;
   width: 280px;
